templates/firefox-syncserver_template.yaml
---
# Source: firefox-syncserver/templates/common.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-firefox-syncserver
  labels:
    helm.sh/chart: firefox-syncserver-0.1.3
    app.kubernetes.io/name: firefox-syncserver
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.8.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: firefox-syncserver
    app.kubernetes.io/instance: release-name
---
# Source: firefox-syncserver/templates/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-firefox-syncserver
  labels:
    helm.sh/chart: firefox-syncserver-0.1.3
    app.kubernetes.io/name: firefox-syncserver
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.8.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: firefox-syncserver
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: firefox-syncserver
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      containers:
      - name: release-name-firefox-syncserver
        image: "ghcr.io/crazy-max/firefox-syncserver:1.8.0"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 5000
          protocol: TCP
        volumeMounts:
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 30
          failureThreshold: 5
          timeoutSeconds: 10
        readinessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 30
          failureThreshold: 5
          timeoutSeconds: 10
---
# Source: firefox-syncserver/templates/common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-firefox-syncserver
  labels:
    helm.sh/chart: firefox-syncserver-0.1.3
    app.kubernetes.io/name: firefox-syncserver
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.8.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.1.0/24
spec:
  rules:
    - host: "firefox-syncserver.192.168.1.189.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-firefox-syncserver
                port:
                  number: 5000
